# faiss

./: CMakeLists.txt  command.txt
faiss/: Clustering.cpp  IndexHNSW.cpp  IndexHNSW.h
faiss/impl/: HNSW.cpp  HNSW.h  NSG.h
tests/: CMakeLists.txt  test_binary_flat.cpp
